--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 
     <groupId>se.alipsa</groupId>
     <artifactId>simple-rest</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <name>Simple Rest</name>
-    <description>Simple, modular Rest library for java 11+</description>
+    <description>Simple, modular Rest library for java 17+</description>
     <url>https://github.com/Alipsa/simple-rest</url>
 
     <licenses>
